# moneychicks-app

./: money 2.py
.devcontainer/: devcontainer.json
stock-market-academy/: money.py  pyproject.toml  readme.md
stock-market-academy/pages/: 0_Intro_to_Stocks.py  1_📈_What_is_a_Stock.py  2_🏢_Why_Companies_Go_Public.py  3_🛒_Where_to_Buy_Stocks.py  4_📊_Stock_Exchanges.py  5_💰_Stock_Pricing.py  6_☕_Market_Analogies.py  7_📋_Market_Indices.py  8_🔍_Search_Topics.py  9_⭐_Bookmarks.py
stock-market-academy/utils/: content_data.py  progress_tracker.py
