[tool.poetry]
name = "moneychicks-app"
version = "0.1.0"
description = "A stock market learning platform using Streamlit"
authors = ["Keya Choudhury <your@email.com>"]
readme = "README.md"
packages = [{include = "moneychicks_app"}]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.35.0"
pandas = "^2.2.2"
numpy = "^1.24.4"
matplotlib = "^3.8.4"
pytz = "^2023.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
